--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,5 @@
 * {
+    font-family: 'roboto';
     font-size: 16px;
     margin: 0px;
     padding: 0px;
@@ -38,8 +39,8 @@ header nav .corner-right {
 
 header nav .corner-right a {
     margin: 10px;
-    color: black;
-    font-size: 0.95rem;
+    color: rgb(65, 65, 65);
+    font-size: 0.8rem;
 }
 
 nav .corner-right .menu-icon {
@@ -47,8 +48,8 @@ nav .corner-right .menu-icon {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    width: 24px;
-    height: 24px;
+    width: 16px;
+    height: 16px;
     margin-left: 5px;
 }   
 
@@ -65,6 +66,7 @@ main .main-logo img {
     width: 272px;
     height: 92px;
     margin-top: 120px;
+    margin-bottom: 20px;
 }
 
 .search-container {
